<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="start"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueGrey"
                android:text="@string/clocked_in"/>

            <TextView
                android:id="@+id/txt_row_clocked_in"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:0000"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:textColor="@color/colorBlueGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clocked_out"/>

            <TextView
                android:gravity="end"
                android:id="@+id/txt_row_clocked_out"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:0000"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="start"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:textColor="@color/colorBlueGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"/>

            <TextView
                android:id="@+id/txt_row_hours"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:textColor="@color/colorBlueGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiation_exposed"/>

            <TextView
                android:id="@+id/txt_row_radiation_exposed"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXX"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

</LinearLayout>